reportsbyparam request multipy params, resources request
