# api/routes/swagger.json
@@ -57,16 +57,22 @@
            {
              "name": "code",
              "in": "query",
-             "description": "2-letter ISO code of the country",
-             "type": "string",
-             "maximum": 1
+             "description": "2-letter ISO codes of the countries",
+             "type": "array",
+             "collectionFormat": "multi",
+             "items": {
+               "type": "string"
+             }
            },
            {
-             "name": "createdby",
+             "name": "type",
              "in": "query",
-             "description": "Name of the report resource",
-             "type": "string",
-             "maximum": 1
+             "description": "Names of the report resources",
+             "type": "array",
+             "collectionFormat": "multi",
+             "items": {
+               "type": "string"
+             }
            },
            {
              "name": "start",
